kubernetes/statefulset.yaml
apiVersion: "apps/v1beta2"
kind: StatefulSet
metadata:
  name: distributed-cache
spec:
  selector:
    matchLabels:
      app: distributed-cache
  serviceName: distributed-cache
  replicas: 3
  template:
    metadata:
      labels:
        app: distributed-cache
    spec:
      containers:
       - name: distributed-cache
         image: "localhost:5000/distributed-cache-on-k8s-poc:1.0"
         ports:
          - containerPort: 2551
         readinessProbe:
          httpGet:
            port: 9000
            path: /health
